--- a/index.html
+++ b/index.html
@@ -2,89 +2,74 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Tarot Maestro</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="coinzilla" content="876e6032c5174633e8f3eef3d3df0f9e" />
+    <title>Maestro Tarot | Élite Profesional</title>
     <style>
-        body { background: #0b0b1a; color: white; font-family: sans-serif; text-align: center; }
-        .caja { border: 2px solid gold; padding: 20px; max-width: 500px; margin: 20px auto; border-radius: 10px; }
-        .partido { display: block; width: 100%; padding: 10px; margin: 5px 0; background: #1a1a2e; color: white; border: 1px solid #444; cursor: pointer; }
-        .partido:hover { border-color: gold; }
-        .carta { width: 80px; height: 120px; display: inline-block; border: 1px solid gold; margin: 5px; background-size: cover; }
-        #resultado-futbol, #resultado-personal { display: none; margin-top: 20px; background: #000; padding: 10px; }
+        body { background: #0b0b1a; color: white; font-family: 'Segoe UI', sans-serif; text-align: center; margin: 0; padding-bottom: 50px; }
+        .header { background: linear-gradient(#1a1a2e, #0b0b1a); padding: 30px; border-bottom: 3px solid gold; }
+        .seccion { background: #16213e; padding: 25px; border-radius: 15px; max-width: 850px; margin: 25px auto; border: 1px solid #333; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        .ad-slot { background: rgba(255,255,255,0.05); border: 1px dashed gold; margin: 15px auto; min-height: 90px; max-width: 728px; display: flex; align-items: center; justify-content: center; color: #666; font-size: 12px; }
+        select { padding: 15px; width: 80%; border-radius: 10px; background: #0b0b1a; color: gold; border: 2px solid gold; font-size: 1.1rem; cursor: pointer; }
+        .grid-p { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 10px; margin-top: 20px; }
+        .btn-p { background: #1a1a2e; color: #aaa; border: 1px solid #444; padding: 15px; border-radius: 10px; cursor: pointer; transition: 0.3s; }
+        .btn-p.active { background: gold; color: black; font-weight: bold; transform: scale(1.05); }
+        .btn-magico { background: linear-gradient(gold, #ccaa00); color: black; font-weight: bold; padding: 20px 40px; border: none; border-radius: 50px; font-size: 1.2rem; cursor: pointer; margin: 20px 0; box-shadow: 0 0 20px gold; display: none; text-transform: uppercase; }
+        .resultado { display: none; margin-top: 30px; padding: 20px; border-top: 2px solid gold; animation: fadeIn 0.8s; }
+        .cartas { display: flex; justify-content: center; gap: 15px; margin-bottom: 20px; flex-wrap: wrap; }
+        .c-img { width: 100px; height: 170px; background-size: cover; border: 2px solid gold; border-radius: 8px; background-position: center; }
+        .caja-txt { padding: 25px; border-radius: 15px; background: #0f3460; border: 2px solid gold; color: gold; font-size: 1.3rem; font-weight: bold; line-height: 1.5; max-width: 700px; margin: 0 auto; }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     </style>
 </head>
 <body>
 
-    <h1>🔮 MAESTRO TAROT</h1>
+    <div class="header"><h1>🔮 MAESTRO TAROT</h1><p>Oráculo Profesional de 78 Cartas</p></div>
 
-    <div class="caja">
-        <h2>⚽ SELECCIONA PARTIDO</h2>
-        <select id="jornada" onchange="verPartidos()" style="width:100%; padding:10px;">
-            <option value="">-- Elige Jornada --</option>
+    <div class="ad-slot">🚀 ESPACIO PUBLICIDAD CRIPTO (BANNER SUPERIOR)</div>
+
+    <div class="seccion">
+        <h2>⚽ PREDICCIÓN DEPORTIVA</h2>
+        <select id="selJ" onchange="actualizarPartidos()">
+            <option value="">-- Elige la Jornada --</option>
             <option value="j21">Jornada 21</option>
             <option value="j22">Jornada 22</option>
+            <option value="j23">Jornada 23</option>
+            <option value="j24">Jornada 24</option>
+            <option value="j25">Jornada 25</option>
         </select>
-        <div id="lista-p" style="margin-top:10px;"></div>
-        <div id="resultado-futbol">
-            <div id="f1" class="carta"></div><div id="f2" class="carta"></div><div id="f3" class="carta"></div>
-            <p id="txt-f" style="color:gold; font-weight:bold;"></p>
+        <div id="listaP" class="grid-p"></div>
+        <button id="btnD" class="btn-magico" onclick="tirar('dep')">Revelar Destino</button>
+        <div id="res-dep" class="resultado">
+            <div class="cartas"><div id="d1" class="c-img"></div><div id="d2" class="c-img"></div><div id="d3" class="c-img"></div></div>
+            <div id="txtD" class="caja-txt"></div>
         </div>
     </div>
 
-    <div class="caja" style="border-color: #00ffcc;">
-        <h2 style="color: #00ffcc;">🌟 TAROT PERSONAL</h2>
-        <button onclick="tirarPersonal()" style="width:100%; padding:15px; background:#00ffcc; font-weight:bold; cursor:pointer;">REALIZAR TIRADA PROFESIONAL</button>
-        <div id="resultado-personal">
-            <div id="p1" class="carta"></div><div id="p2" class="carta"></div><div id="p3" class="carta"></div>
-            <p id="txt-p" style="color:#00ffcc; font-weight:bold;"></p>
+    <div class="ad-slot">💰 ESPACIO PUBLICIDAD CRIPTO (INTERMEDIO)</div>
+
+    <div class="seccion" style="border-color: #00ffcc;">
+        <h2 style="color: #00ffcc;">🌟 TAROT PROFESIONAL PERSONAL</h2>
+        <button class="btn-magico" style="display:inline-block; background:#00ffcc; box-shadow: 0 0 20px #00ffcc;" onclick="tirar('per')">Realizar Tirada Completa</button>
+        <div id="res-per" class="resultado" style="border-color:#00ffcc;">
+            <div class="cartas"><div id="p1" class="c-img"></div><div id="p2" class="c-img"></div><div id="p3" class="c-img"></div></div>
+            <div id="txtP" class="caja-txt" style="color:#00ffcc; border-color:#00ffcc;"></div>
         </div>
     </div>
 
     <script>
         const partidos = {
-            j21: ["Levante vs Elche", "Rayo vs Osasuna", "Valencia vs Espanyol", "Sevilla vs Athletic"],
-            j22: ["Espanyol vs Alavés", "Oviedo vs Girona", "Real Madrid vs Rayo", "Betis vs Valencia"]
+            j21: ["Levante vs Elche", "Rayo vs Osasuna", "Valencia vs Espanyol", "Sevilla vs Athletic", "Villarreal vs Madrid", "Barça vs Oviedo"],
+            j22: ["Espanyol vs Alavés", "Oviedo vs Girona", "Osasuna vs Villarreal", "Madrid vs Rayo", "Betis vs Valencia", "Getafe vs Celta"],
+            j23: ["Alavés vs Getafe", "Athletic vs Levante", "Atlético vs Betis", "Barça vs Mallorca", "Celta vs Osasuna"],
+            j24: ["Elche vs Osasuna", "Girona vs Barça", "Madrid vs R.Sociedad", "Sevilla vs Alavés"],
+            j25: ["Athletic vs Elche", "Atlético vs Espanyol", "Barça vs Levante", "Villarreal vs Valencia"]
         };
 
         const mazo = [
-            {n:"Mago", i:"the-magician.png", t:"Éxito inminente."},
-            {n:"Sol", i:"the-sun.png", t:"Gran alegría."},
-            {n:"Mundo", i:"the-world.png", t:"Objetivo cumplido."},
-            {n:"Estrella", i:"the-star.png", t:"Nueva esperanza."},
-            {n:"Torre", i:"the-tower.png", t:"Cambio necesario."}
-        ];
-
-        function verPartidos() {
-            const j = document.getElementById('jornada').value;
-            const lista = document.getElementById('lista-p');
-            lista.innerHTML = "";
-            if(!j) return;
-            partidos[j].forEach(p => {
-                const btn = document.createElement('button');
-                btn.className = 'partido';
-                btn.innerText = p;
-                btn.onclick = () => tirarFutbol(p);
-                lista.appendChild(btn);
-            });
-        }
-
-        function tirarFutbol(nombre) {
-            let m = [...mazo].sort(() => Math.random() - 0.5);
-            document.getElementById('f1').style.backgroundImage = `url(https://www.trustedtarot.com/img/cards/${m[0].i})`;
-            document.getElementById('f2').style.backgroundImage = `url(https://www.trustedtarot.com/img/cards/${m[1].i})`;
-            document.getElementById('f3').style.backgroundImage = `url(https://www.trustedtarot.com/img/cards/${m[2].i})`;
-            const res = ["Victoria Local", "Empate", "Victoria Visitante"];
-            document.getElementById('txt-f').innerText = nombre + ": " + res[Math.floor(Math.random()*3)];
-            document.getElementById('resultado-futbol').style.display = "block";
-        }
-
-        function tirarPersonal() {
-            let m = [...mazo].sort(() => Math.random() - 0.5);
-            document.getElementById('p1').style.backgroundImage = `url(https://www.trustedtarot.com/img/cards/${m[0].i})`;
-            document.getElementById('p2').style.backgroundImage = `url(https://www.trustedtarot.com/img/cards/${m[1].i})`;
-            document.getElementById('p3').style.backgroundImage = `url(https://www.trustedtarot.com/img/cards/${m[2].i})`;
-            document.getElementById('txt-p').innerText = "Tu destino: " + m[0].n + ". " + m[0].t;
-            document.getElementById('resultado-personal').style.display = "block";
-        }
-    </script>
-</body>
-</html>
+            {n:"El Mago", i:"the-magician.png", t:"Representa el poder absoluto y la capacidad de canalizar la energía para lograr tus objetivos. En este momento, tienes todas las herramientas para triunfar, solo necesitas voluntad y enfoque. La suerte te acompaña en nuevos proyectos."},
+            {n:"El Sol", i:"the-sun.png", t:"Es la carta del éxito total y la claridad. Augura un periodo de gran felicidad, vitalidad y transparencia. Todo lo que estaba oculto sale a la luz para beneficiarte. Es el mejor momento para disfrutar de la prosperidad y el amor sincero."},
+            {n:"La Torre", i:"the-tower.png", t:"Indica una ruptura con estructuras viejas y obsoletas. Aunque el cambio pueda parecer brusco o inesperado, es una liberación necesaria para construir algo más sólido sobre bases reales. No temas a la transformación, es tu renacimiento."},
+            {n:"El Mundo", i:"the-world.png", t:"Simboliza la culminación de un ciclo importante y el éxito rotundo. Has llegado a la meta y el universo te premia con plenitud. Es momento de celebrar tus logros y prepararte para una nueva etapa de expansión global."},
+            {n:"La Estrella", i:"the-star.png", t:"Trae esperanza, inspiración y guía espiritual. Tras la tormenta llega la calma; esta carta te asegura que vas por el buen camino. Mantén la fe, pues la paz interior y la renovación de tus ilusiones están garantizadas."},
+            {n:"El Juicio", i:"judgement.png", t:"Momento de renacimiento y evaluación
